--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -8,23 +8,53 @@
     align-items: center;
     color: $text-color;
     margin: 0 auto;
+    padding: 0 1rem;
 
-    span {
+    .menu-title {
         font-size: 22px;
         font-weight: 600;
         display: flex;
         align-items: center;
     }
 
+    .ion-md-menu {
+        font-size: 36px;
+        
+        align-items: center;
+        cursor: pointer;
+        display: none;
+    }
+
+    .menu-content-container {
+        display: flex;
+        align-items: center;
+        max-width: 700px;
+        width: 100%;
+        justify-content: space-between;
+        flex-direction: row;
+
+        .ant-avatar {
+            background: $background;
+            border: 2px solid $border;
+        }
+
+        .menu-avatar-name {
+            font-size: 18px;
+            margin-left: 15px;
+        }
+    }
+
     ul {
         height: 100%;
-        max-width: 600px;
+        max-width: 500px;
         width: 100%;
         list-style: none;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        margin: 0;
+        padding: 0;
         
         a {
             text-decoration: none;
@@ -36,6 +66,50 @@
                 color: $text-link;
                 transition: all .1s ease-in-out;
             }
+        }
+    }
+}
+.button {
+    -webkit-appearance: none;
+}
+
+@media screen and (max-width: 900px) {
+    .site-navigation {
+        .menu-content-container {
+            width: 300px;
+            height: calc(100% - 65px);
+            background: #fff;
+            position: absolute;
+            top: 65px;
+            left: -300px;
+            transition: 300ms ease left;
+            flex-direction: column;
+            justify-content: start;
+            align-items: flex-start;
+            padding: 1rem  0 0 1rem;
+            
+
+            &.active {
+                left: 0px;
+            }
+
+            span {
+                order: 1;
+            }
+
+            ul {
+                order: 2;
+                flex-direction: column;
+                max-height: 35%;
+                margin-top: 3rem;
+                align-items: flex-start;
+                
+            }
+
+            
+        }
+        .ion-md-menu {
+            display: flex;
         }
     }
 }
