--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -2,10 +2,10 @@
 @import './_navigation';
 
 
-body {
+html body {
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     margin: 0;
-    background-color: #f8f9fa;
+    background-color: $background;
 }
