--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -87,6 +87,7 @@
             justify-content: start;
             align-items: flex-start;
             padding: 1rem  0 0 1rem;
+            z-index: 100;
             
 
             &.active {
